kubernetes/apps/default/voip/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: voip
subsets:
- addresses:
  - ip: ${SECRET_VOIP_IP}
  ports:
  - name: https
    port: 443
    protocol: TCP
  - name: voip
    port: 5060
    protocol: UDP
