kubernetes/apps/default/voip/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: voip
  namespace: default
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: None
  type: ClusterIP
