kubernetes/apps/default/voip/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app voip
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal
  rules:
  - host: &host voip.${SECRET_DOMAIN_SECONDARY}
    http:
      paths:
      - backend:
          service:
            name: *app
            port:
              number: 443
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - *host
